# rnot

./: Cargo.toml  introspect.notif  test.notif
migrations/: 20210528031414_add_notification.sql  20210528033610_add_index_on_sender.sql
src/: database.rs  dbus_methods.rs  extension_methods.rs  main.rs
