[package]
name = "rnot"
version = "0.1.0"
authors = ["Josiah Hilden <jhilden13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = [ "full" ] }
tracing = "^0.1"
tracing-subscriber = "^0.2"
anyhow = "^1"

dbus = "^0.9"
dbus-tokio = "^0.7"
dbus-crossroads = "^0.3"
